--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <footer class="footer">
         <div class="footer_selectores">
             <a href="https://es.pornhub.com/view_video.php?viewkey=ph5ec9f49972de8">Conecta</a>
-            | <a href="https://www.facebook.com/watch/?ref=search&v=237885067413183&external_log_id=6f2a4fd7-6c0a-4142-9105-e548a2dbb9d3&q=el%20bicho"><img src="./assets/iconoFacebook.png" alt="iconoFacebook" class="icon"> Facebook</a> 
-            | <a href="https://www.instagram.com/fegalvao_/"><img src="./assets/iconoInstagram.png" alt="iconoInstagram" class="icon">Instagram</a> 
-            | <a href="https://www.youtube.com/watch?v=kfARUtdC7SY&t=8s"><img src="./assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
+            <span>|</span><a href="https://www.facebook.com/watch/?ref=search&v=237885067413183&external_log_id=6f2a4fd7-6c0a-4142-9105-e548a2dbb9d3&q=el%20bicho"><img src="./assets/iconoFacebook.png" alt="iconoFacebook" class="icon"> Facebook</a> 
+            <span>|</span><a href="https://www.instagram.com/fegalvao_/"><img src="./assets/iconoInstagram.png" alt="iconoInstagram" class="icon">Instagram</a> 
+            <span>|</span><a href="https://www.youtube.com/watch?v=kfARUtdC7SY&t=8s"><img src="./assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
         </div>
     </footer>
 </body>
