index.js agregado y modificaciones en index.html e index.css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <img class="header_logo-imagenLogo" src="https://scontent.fmid1-2.fna.fbcdn.net/v/t1.0-9/116343728_183186249897592_7872352272283125949_n.jpg?_nc_cat=106&ccb=2&_nc_sid=8bfeb9&_nc_eui2=AeEM4VG5wuIOg1rECOfVrTaFXFMpF1P_NYFcUykXU_81gaHrdnYk_wVVBZjyrIXlqrM2A8SYAy6q2in4krnyAp9t&_nc_ohc=-2UQdY84-BIAX8P702f&_nc_ht=scontent.fmid1-2.fna&oh=2ee861b4863fb067df71a1df11660677&oe=60108201" alt="Imagen Intra salud">
         </div>
         <div class="header_busqueda">
-            <a href=""><img class="header_busqueda-imagenLupa" src="./assets/iconoLupa.png" alt="icono de buscar"></a>
+            <a href=""><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="./assets/iconoLupa.png"></a>
             <a class="header_busqueda-SignUp" href="">Sign up</a> |
-            <button class="header_busqueda-buttonLogin">Login</button>
+            <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
     </header>
     <nav class="navegacion">
@@ -38,5 +38,6 @@
             <span>|</span><a href="https://www.youtube.com/watch?v=kfARUtdC7SY&t=8s"><img src="./assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
         </div>
     </footer>
+    <script defer src="index.js"></script>
 </body>
 </html>
