Idea sobre estructura de archivos

--- a/pages/inicio/index.html
+++ b/pages/inicio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../layout/index.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
             <img class="header_logo-imagenLogo" src="https://scontent.fmid1-2.fna.fbcdn.net/v/t1.0-9/116343728_183186249897592_7872352272283125949_n.jpg?_nc_cat=106&ccb=2&_nc_sid=8bfeb9&_nc_eui2=AeEM4VG5wuIOg1rECOfVrTaFXFMpF1P_NYFcUykXU_81gaHrdnYk_wVVBZjyrIXlqrM2A8SYAy6q2in4krnyAp9t&_nc_ohc=-2UQdY84-BIAX8P702f&_nc_ht=scontent.fmid1-2.fna&oh=2ee861b4863fb067df71a1df11660677&oe=60108201" alt="Imagen Intra salud">
         </div>
         <div class="header_busqueda">
-            <a href=""><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="./assets/iconoLupa.png"></a>
+            <a href=""><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
             <a class="header_busqueda-SignUp" href="">Sign up</a> |
             <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
@@ -33,11 +33,11 @@
     <footer class="footer">
         <div class="footer_selectores">
             <a href="https://es.pornhub.com/view_video.php?viewkey=ph5ec9f49972de8">Conecta</a>
-            <span>|</span><a href="https://www.facebook.com/watch/?ref=search&v=237885067413183&external_log_id=6f2a4fd7-6c0a-4142-9105-e548a2dbb9d3&q=el%20bicho"><img src="./assets/iconoFacebook.png" alt="iconoFacebook" class="icon"> Facebook</a> 
-            <span>|</span><a href="https://www.instagram.com/fegalvao_/"><img src="./assets/iconoInstagram.png" alt="iconoInstagram" class="icon">Instagram</a> 
-            <span>|</span><a href="https://www.youtube.com/watch?v=kfARUtdC7SY&t=8s"><img src="./assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
+            <span>|</span><a href="https://www.facebook.com/watch/?ref=search&v=237885067413183&external_log_id=6f2a4fd7-6c0a-4142-9105-e548a2dbb9d3&q=el%20bicho"><img src="../../assets/iconoFacebook.png" alt="iconoFacebook" class="icon"> Facebook</a> 
+            <span>|</span><a href="https://www.instagram.com/fegalvao_/"><img src="../../assets/iconoInstagram.png" alt="iconoInstagram" class="icon">Instagram</a> 
+            <span>|</span><a href="https://www.youtube.com/watch?v=kfARUtdC7SY&t=8s"><img src="../../assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
         </div>
     </footer>
-    <script defer src="index.js"></script>
+    <script defer src="../layout/index.js"></script>
 </body>
 </html>
