Pagina de inicio

--- a/pages/inicio/index.html
+++ b/pages/inicio/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="../layout/index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <header>
@@ -25,8 +26,36 @@
             <a href="" >Contacto</a>
         </div>
     </nav>  
-    <main class="posts">
-        <div class="posts_container">
+    <main>
+        <div>
+            <h1>Últimas publicaciones</h1>
+            <div class="container">
+                <article>
+                    <img src="./assets/image.png" alt="">
+                    <div>
+                        <h3>Titulo de la publicación</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus neque voluptatibus error non nesciunt impedit rem ullam eius velit natus inventore, minima consequatur eum molestias, doloremque porro eveniet ratione animi!</p>
+                        <a href="">Ver publicación...</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="./assets/image.png" alt="">
+                    <div>
+                        <h3>Titulo de la publicación</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus neque voluptatibus error non nesciunt impedit rem ullam eius velit natus inventore, minima consequatur eum molestias, doloremque porro eveniet ratione animi!</p>
+                        <a href="">Ver publicación...</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="./assets/image.png" alt="">
+                    <div>
+                        <h3>Titulo de la publicación</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus neque voluptatibus error non nesciunt impedit rem ullam eius velit natus inventore, minima consequatur eum molestias, doloremque porro eveniet ratione animi!</p>
+                        <a href="">Ver publicación...</a>
+                    </div>
+                </article>
+                
+            </div>
         </div>
     </main>
     <hr class="line">
