--- a/pages/inicio/index.html
+++ b/pages/inicio/index.html
@@ -14,13 +14,13 @@
         </div>
         <div class="header_busqueda">
             <a href=""><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
-            <a class="header_busqueda-SignUp" href="">Sign up</a> |
+            <a class="header_busqueda-SignUp" href="../registro/registro.html">Sign up</a> |
             <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
     </header>
     <nav class="navegacion">
         <div class="navegacion_selectores">
-            <a href="" >Inicio</a>
+            <a href="./">Inicio</a>
             <a href="" >Sobre mí</a>
             <a href="" >Blog</a>
             <a href="" >Contacto</a>
