Pagina Sobre Mi

--- a/pages/inicio/index.html
+++ b/pages/inicio/index.html
@@ -21,7 +21,7 @@
     <nav class="navegacion">
         <div class="navegacion_selectores">
             <a href="./">Inicio</a>
-            <a href="" >Sobre mí</a>
+            <a href="../about/" >Sobre mí</a>
             <a href="" >Blog</a>
             <a href="" >Contacto</a>
         </div>
