--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -20,10 +20,10 @@
     </header>
     <nav class="navegacion">
         <div class="navegacion_selectores">
-            <a href="./">Inicio</a>
-            <a href="" >Sobre mí</a>
-            <a href="" >Blog</a>
-            <a href="" >Contacto</a>
+            <a href="../inicio/">Inicio</a>
+            <a href="">Sobre mí</a>
+            <a href="../inicio/" >Blog</a>
+            <a href="">Contacto</a>
         </div>
     </nav>  
     <main>
