gh-pages arreglado

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=https://plupyt.github.io/proyectoBlog/pages/inicio/" />
-    <title>Document</title>
+    <title>Dummy index</title>
 </head>
 <body>
     
