bug en direcciones arregladas

--- a/pages/inicio/index.html
+++ b/pages/inicio/index.html
@@ -15,7 +15,7 @@
             </a>
         </div>
         <div class="header_busqueda">
-            <a href="/pages/busqueda/index.html"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
+            <a href="/proyectoBlog/pages/busqueda/index.html"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
             <a class="header_busqueda-SignUp" href="../registro/registro.html">Sign up</a> |
             <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
