dirección de login arreglada

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/layout/index.css">
-    <link rel="stylesheet" href="/pages/registro/registro.css">
-    <link rel="stylesheet" href="/pages/login/login.css">
+    <link rel="stylesheet" href="../layout/index.css">
+    <link rel="stylesheet" href="../registro/registro.css">
+    <link rel="stylesheet" href="./login.css">
     <title>Inicio de sesión</title>
 </head>
 <body>
