dirección de login y búsqueda a inicio registro corregida

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header_busqueda">
             <a href="../busqueda/index.html"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
-            <a class="header_busqueda-SignUp" href="">Sign up</a> |
+            <a class="header_busqueda-SignUp" href="../registro/registro.html">Sign up</a> |
             <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
     </header>
