dirección de registro a login corregida

--- a/pages/registro/registro.html
+++ b/pages/registro/registro.html
@@ -81,6 +81,6 @@
             <span>|</span><a href="https://www.youtube.com/watch?v=kfARUtdC7SY&t=8s"><img src="/assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
         </div>
     </footer>
-    <script defer src="/pages/layout/index.js"></script>
+    <script defer src="../layout/index.js"></script>
 </body>
 </html>
