dirección de búsqueda y de login corregidas

--- a/pages/busqueda/index.html
+++ b/pages/busqueda/index.html
@@ -15,7 +15,7 @@
             </a>
         </div>
         <div class="header_busqueda">
-            <a href="../registro/registro.html"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
+            <a href="../registro/"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
             <a class="header_busqueda-SignUp" href="">Sign up</a> |
             <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
