dirección de búsqueda corregida

--- a/pages/busqueda/index.html
+++ b/pages/busqueda/index.html
@@ -15,8 +15,8 @@
             </a>
         </div>
         <div class="header_busqueda">
-            <a href="../registro/"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
-            <a class="header_busqueda-SignUp" href="">Sign up</a> |
+            <a href="./"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
+            <a class="header_busqueda-SignUp" href="../registro/">Sign up</a> |
             <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
     </header>
