agregada dirección de post

--- a/pages/inicio/index.html
+++ b/pages/inicio/index.html
@@ -37,7 +37,7 @@
                     <div>
                         <h3>Titulo de la publicación</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus neque voluptatibus error non nesciunt impedit rem ullam eius velit natus inventore, minima consequatur eum molestias, doloremque porro eveniet ratione animi!</p>
-                        <a href="">Ver publicación...</a>
+                        <a href="../post/post.html">Ver publicación...</a>
                     </div>
                 </article>
                 <article>
@@ -45,7 +45,7 @@
                     <div>
                         <h3>Titulo de la publicación</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus neque voluptatibus error non nesciunt impedit rem ullam eius velit natus inventore, minima consequatur eum molestias, doloremque porro eveniet ratione animi!</p>
-                        <a href="">Ver publicación...</a>
+                        <a href="../post/post.html">Ver publicación...</a>
                     </div>
                 </article>
                 <article>
@@ -53,7 +53,7 @@
                     <div>
                         <h3>Titulo de la publicación</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus neque voluptatibus error non nesciunt impedit rem ullam eius velit natus inventore, minima consequatur eum molestias, doloremque porro eveniet ratione animi!</p>
-                        <a href="">Ver publicación...</a>
+                        <a href="../post/post.html">Ver publicación...</a>
                     </div>
                 </article>
             </div>
