blog eliminado de la navegación y corrección de algunas direcciones que tenían conflicto

--- a/pages/inicio/index.html
+++ b/pages/inicio/index.html
@@ -15,7 +15,7 @@
             </a>
         </div>
         <div class="header_busqueda">
-            <a href="/proyectoBlog/pages/busqueda/index.html"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
+            <a href="../busqueda/index.html"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
             <a class="header_busqueda-SignUp" href="../registro/registro.html">Sign up</a> |
             <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
@@ -24,7 +24,6 @@
         <div class="navegacion_selectores">
             <a href="./">Inicio</a>
             <a href="../about/" >Sobre mí</a>
-            <a href="" >Blog</a>
             <a href="" >Contacto</a>
         </div>
     </nav>  
