--- a/pages/busqueda/index.html
+++ b/pages/busqueda/index.html
@@ -66,10 +66,10 @@
     <hr class="line">
     <footer class="footer">
         <div class="footer_selectores">
-            <a href="">Conecta</a>
-            <span>|</span><a href=""><img src="../../assets/iconoFacebook.png" alt="iconoFacebook" class="icon"> Facebook</a> 
-            <span>|</span><a href=""><img src="../../assets/iconoInstagram.png" alt="iconoInstagram" class="icon">Instagram</a> 
-            <span>|</span><a href=""><img src="../../assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
+            <a href="https://www.uady.mx/">Conecta</a>
+            <span>|</span><a href="https://www.facebook.com"><img src="../../assets/iconoFacebook.png" alt="iconoFacebook" class="icon"> Facebook</a> 
+            <span>|</span><a href="https://www.instagram.com"><img src="../../assets/iconoInstagram.png" alt="iconoInstagram" class="icon">Instagram</a> 
+            <span>|</span><a href="https://www.youtube.com"><img src="../../assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
         </div>
     </footer>
     <script defer src="../layout/index.js"></script>
