--- a/pages/inicio/index.html
+++ b/pages/inicio/index.html
@@ -62,10 +62,10 @@
     <hr class="line">
     <footer class="footer">
         <div class="footer_selectores">
-            <a href="https://es.pornhub.com/view_video.php?viewkey=ph5ec9f49972de8">Conecta</a>
-            <span>|</span><a href="https://www.facebook.com/watch/?ref=search&v=237885067413183&external_log_id=6f2a4fd7-6c0a-4142-9105-e548a2dbb9d3&q=el%20bicho"><img src="../../assets/iconoFacebook.png" alt="iconoFacebook" class="icon"> Facebook</a> 
-            <span>|</span><a href="https://www.instagram.com/fegalvao_/"><img src="../../assets/iconoInstagram.png" alt="iconoInstagram" class="icon">Instagram</a> 
-            <span>|</span><a href="https://www.youtube.com/watch?v=kfARUtdC7SY&t=8s"><img src="../../assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
+            <a href="https://www.uady.mx/">Conecta</a>
+            <span>|</span><a href="https://www.facebook.com"><img src="../../assets/iconoFacebook.png" alt="iconoFacebook" class="icon"> Facebook</a> 
+            <span>|</span><a href="https://www.instagram.com"><img src="../../assets/iconoInstagram.png" alt="iconoInstagram" class="icon">Instagram</a> 
+            <span>|</span><a href="https://www.youtube.com"><img src="../../assets/iconoYoutube.png" alt="iconoYoutube" class="icon">Youtube</a>
         </div>
     </footer>
     <script defer src="../layout/index.js"></script>
