--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -24,7 +24,7 @@
         <div class="navegacion_selectores">
             <a href="../inicio/">Inicio</a>
             <a href="../about/">Sobre mí</a>
-            <a href="">Contacto</a>
+            <a href="../contactanos/" >Contacto</a>
         </div>
     </nav>  
     <main>
