--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -25,7 +25,7 @@
         <div class="navegacion_selectores">
             <a href="../inicio/" >Inicio</a>
             <a href="../about/" >Sobre mí</a>
-            <a href="" >Contacto</a>
+            <a href="../contactanos/" >Contacto</a>
         </div>
     </nav>  
     <main class="posts">
